@@ -25,7 +25,7 @@ Optionally, if you have doxygen, you can build a reference manual with:
 
 Running utio applications requires the terminfo database. No, termcap
 is not the same as terminfo; the latter is a collection of binary
-files under /usr/share/terminfo. Big-endian systems are not supported.
+files under /usr/share/terminfo.
 
 3. Usage
 
