@@ -257,7 +257,7 @@ unpack it into its directory. Make sure you have the necessary dependencies:
 <ul>
     <li><a href="http://gcc.gnu.org">gcc compiler</a> with C++ support. Version 3 or later is highly recommended.</li>
     <li>POSIX-compatible libc. Anything made in the last 5 years should work.</li>
-    <li>The <a href="http://sourceforge.net/projects/ustl">uSTL</a> library version 0.6 or higher.</li>
+    <li>The <a href="http://sourceforge.net/projects/ustl">uSTL</a> library version 0.8 or higher.</li>
     <li>The terminfo database. In the <a href="http://www.gnu.org/software/ncurses/ncurses.html">ncurses</a> package, if your distribution doesn't provide it.</li>
 </ul>
 <pre>
